Wed Jan 10 14:39:45 2001  Mark Mitchell  <mark@codesourcery.com>

	* com.c (ffecom_init_zero_):  Remove last argument in call to
	make_decl_rtl; use make_function_rtl instead of make_decl_rtl.
	(ffecom_lookup_label_): Likewise.
	(builtin_function): Likewise.
	(start_function): Likewise.

Thu Dec 21 21:19:42 2000  Joseph S. Myers  <jsm28@cam.ac.uk>

	* g77install.texi, g77.texi: Update last-updated dates for
	installation information and the manual as a whole.
	* bugs.texi, news.texi: Update copyright years in the comments at
	the top of the file.

2000-12-21  Joseph S. Myers  <jsm28@cam.ac.uk>

	* g77install.texi: Adjust wording of an EGCS reference.

Thu Dec 21 20:00:48 2000  Joseph S. Myers  <jsm28@cam.ac.uk>

	* BUGS, NEWS: Regenerate.

2000-12-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* com.c [VMS]: Remove definition of BSTRING.

2000-12-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* g77.texi: Update GPL copy not to refer to years 19@var{yy}.

2000-12-18  Toon Moene <toon@moene.indiv.nluug.nl>

	* bugs.texi: Correct copyright years.
	* g77.texi: Likewise.
	* news.texi: Likewise.

2000-12-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* g77install.texi: Remove obsolete parts only used for INSTALL,
	and DOC-G77 conditionals.  Update last-update-install date.

Sat Dec  9 10:20:11 2000  Joseph S. Myers  <jsm28@cam.ac.uk>

	* .cvsignore: New file; add info files.

2000-12-08  Joseph S. Myers  <jsm28@cam.ac.uk>

	* Make-lang.in (f77.info): Depend on info files in source
	directory.
	(f/g77.info): Build info files in source directory; don't build
	them unless BUILD_INFO is "info".
	(f77.install-info): Install info files from source directory.

2000-12-07  Zack Weinberg  <zack@wolery.stanford.edu>

	* Make-lang.in: Link f/fini with safe-ctype.o.
	* bad.c: Don't test ISUPPER(c) || ISLOWER(c) before calling TOUPPER(c).
	* com.c: Use TOUPPER, not ffesrc_toupper.
	* fini.c: Don't test ISALPHA(c) before calling TOUPPER(c)/TOLOWER(c).
	* intrin.c: Don't test IN_CTYPE_DOMAIN(c).